--- a/src/components/ResetButton.css
+++ b/src/components/ResetButton.css
@@ -1,10 +1,10 @@
 .reset-button {
     border: none;
     border-radius: 0.5rem;
-    background-color: var(--o-color);
+    background-color: var(--reset-bg-color);
     font-family: 'Fredoka', sans-serif;
     font-size: 2rem;
-    color: white;
+    color: var(--txt-color);
     padding: 0.5rem 1rem;
     margin: 2rem auto;
     display: block;
